# dvizhenie-microservices-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  TZ.md  api_testing.md  docker-compose.yml  features.md  kanban.md  openapi.yaml  plan.md  run_tests.sh  structure.mmd
nginx/: Dockerfile  entrypoint.sh  form_manual.html  nginx.conf  openapi.yaml
services/api_service/: Dockerfile  pyproject.toml
services/api_service/src/app/: alembic.ini  main.py
services/api_service/src/app/alembic/: env.py
services/api_service/src/app/alembic/versions/: 1a2b3c4d5e6f_add_partial_unique_index_for_drafts.py  2b8a7c1fde9e_add_form_schema_table.py  e47c13a2d7a2_create_initial_refactored_tables.py  f08fb5aa39e6_create_initial_tables.py
services/api_service/src/app/api/: applications.py  auth.py  schemas.py  sessions.py
services/api_service/src/app/core/: config.py  db.py  dependencies.py  initial_data.py
services/api_service/src/app/internal_clients/: __init__.py
services/api_service/src/app/models/: db_models.py
services/api_service/src/app/repositories/: applications.py  forms.py
services/api_service/src/app/schemas/: applications.py  forms.py  sessions.py
services/api_service/src/app/services/: export_service.py  zip_service.py
services/api_service/src/app/static/: form_schema.json
services/api_service/src/tests/: conftest.py  test_api_edpoints.py  test_applications.py  test_repositories.py  test_services.py
services/bot_service/: Dockerfile  pyproject.toml
services/bot_service/src/app/: main.py
services/bot_service/src/app/bot/: handlers.py
services/bot_service/src/app/core/: config.py
services/bot_service/src/app/internal_clients/: api_client.py
services/bot_service/src/tests/: conftest.py  test_api_client.py  test_handlers.py
services/file_storage_service/: Dockerfile  pyproject.toml  pytest.ini
services/file_storage_service/src/app/: main.py  s3_client.py
services/file_storage_service/src/app/api/: files.py
services/file_storage_service/src/app/core/: config.py
services/file_storage_service/src/app/schemas/: files.py
services/file_storage_service/src/tests/: conftest.py  test_api_files.py  test_config.py  test_file_endpoints.py  test_integration.py  test_main.py  test_s3_client.py  test_schemas.py
